# taskflow-agent

./: .dockerignore  .env.docker  .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  RELEASE_v0.1.0.md  ai_task_extractor.py  app.py  config.py  converstation_handler.py  docker-compose.yml  extensions.py  main.py  manifest.json  models.py  prototype.py  pyproject.toml  requirements.txt  routes.py  ruff.toml  run_service.py  scheduler.py  slack_bot.py
.github/workflows/: ci.yml  release.yml
.streamlit/: config.toml  requirements.txt
agents/: __init__.py  filtering_agent.py  task_extraction_agent.py  task_formatting_agent.py
integrations/: slack_processor.py  task_exporter.py
llm_providers/: __init__.py  base_provider.py  groq_provider.py  provider_factory.py
prompts/: extraction_templates.py
scripts/: init_db.sql  load_env.ps1  load_env.py  load_env.sh
src/: main.py
static/: main.js
static/js/: main.js
taskflow/backend/: main.py
taskflow/backend/config/: logger.py  settings.py
taskflow/backend/extractor/: service.py
taskflow/backend/ingestor/: service.py
taskflow/backend/persistence/: __init__.py  crud.py  database.py  models.py
taskflow/backend/platform_manager/: service.py
taskflow/backend/utils/: llms.py  messaging.py  prompts.py
taskflow/frontend/: app.py
taskflow/models/: extractor.py
taskflow/shared/: events.py
tasks/: __init__.py  base_task.py  extraction_task.py  filtering_task.py  formatting_task.py
templates/: index.html  tasks.html
tests/: test_app.py
tests/unit/extractor/: test_task_extractor.py
utils/: config_manager.py
