[project]
name = "taskflow-agent"
version = "0.1.0"
description = "Event-driven task extraction and management service using RabbitMQ."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.3.27",
    "langchain-groq>=0.3.8",
    "pika>=1.3.2",
    "psycopg2>=2.9.9",
    "sqlalchemy>=2.0.0",
    "streamlit>=1.28.0",
]

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.20",
    "pytest>=8.4.2",
]
