[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "taskflow-agent"
version = "0.1.0"
description = "Event-driven task extraction and management service using RabbitMQ."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.3.27",
    "langchain-groq>=0.3.8",
    "pika>=1.3.2",
    "streamlit>=1.28.0",
]

[tool.hatch.build.targets.wheel]
packages = ["taskflow"]

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.20",
    "pytest>=8.4.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
